Fix cookie banner on mobile devices

--- a/_sass/component/base.sass
+++ b/_sass/component/base.sass
@@ -11,6 +11,9 @@
   // no overflow horizontally
   max-width: $f
 
+html
+  overflow-x: hidden
+
 body
   font-family: $primary-font
 
@@ -39,6 +42,7 @@ h1, h2, h3, h4, h5, h6
   max-width: $site-width
 
   margin: auto
+
 
 .main
   padding: $s 0 $s 0
