--- a/_sass/component/header.sass
+++ b/_sass/component/header.sass
@@ -9,6 +9,7 @@
     width: 100%
     justify-content: space-between
     max-width: $site-width
+    flex-wrap: wrap
   &__logo
     display: flex
     align-items: center
